Fixed issue with z-index and positioning of SearchPanes button dropdown.
Jira Issue DD-1345

Sync to source repo @0de901717d76a2cfb5d7da9f159e16366415ea0f

--- a/css/searchPanes.bootstrap.css
+++ b/css/searchPanes.bootstrap.css
@@ -43,6 +43,12 @@ div.dtsp-topRow button.dtsp-searchIcon {
   background-size: 12px;
 }
 
+div.dt-button-collection {
+  top: 40px !important;
+  left: 0px !important;
+  z-index: 2002;
+}
+
 div.dataTables_scrollBody {
   background: white !important;
 }
@@ -137,6 +143,7 @@ div.dtsp-panesContainer {
   border-radius: 10px;
   margin: 5px 0;
   clear: both;
+  z-index: 2002;
 }
 div.dtsp-panesContainer div.dtsp-title {
   float: left;
